2009-11-13  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* NEWS:
	* configure.ac:
	* qt4/qt4.pro:
	- updated point version. Official release 14.0.1.

	* qt4/detail_dialog.cpp:
	* qt4/detail_dialog.h:
	* qt4/disp_holder.cpp:
	* qt4/options.cpp:
	* qt4/player_painter.cpp:
	* qt4/player_type_dialog.cpp:
	- fixed catch model.

2009-11-06  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* NEWS:
	* configure.ac:
	* qt4/qt4.pro:
	- updated major version. Official release 14.0.0.

	* qt4/detail_dialog.cpp:
	* qt4/player_painter.cpp:
	* qt4/player_type_dialog.cpp:
	* qt4/qt4.pro:
	- added the information of kick_power_rate and
	foul_detect_probability to PlayerTypeDialog.
	- changed default color settings.

	* rcsslogplayer/parser.cpp:
	* rcsslogplayer/rcsslogplayer.pro:
	* rcsslogplayer/types.cpp:
	* rcsslogplayer/types.h:
	- added a static method to initialize default player type
	parameters.

2009-11-05  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* qt4/detail_dialog.cpp:
	* qt4/detail_dialog.h:
	- added catch probability information.
	- added foul probability information.

	* qt4/player_painter.cpp:
	- added catch probability painting.

2009-11-04  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* qt4/config_dialog.cpp:
	* qt4/config_dialog.h:
	* qt4/log_slider_tool_bar.cpp:
	* qt4/options.cpp:
	* qt4/options.h:
	* qt4/player_painter.cpp:
	* qt4/player_painter.h:
	* qt4/player_type_dialog.cpp:
	- improved the painting policy of players' card status.
	- added '--show-card' option.
	- fixed duplicated short cut keys.

2009-11-02  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* configure.ac:
	* qt4/ball_painter.h:
	* qt4/field_canvas.cpp:
	* qt4/field_canvas.h:
	* qt4/main.cpp:
	* qt4/player_painter.cpp:
	* qt4/player_painter.h:
	* rcsslogplayer/parser.cpp:
	* rcsslogplayer/types.cpp:
	* rcsslogplayer/types.h:
	* tool/rcg2xml.cpp:
	- supported v14 features.
	- supported opengl widget.

2009-11-01  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* m4/qt.m4: