@@ -1,3 +1,9 @@
+2009-12-03  Hidehisa Akiyama  <akky@users.sourceforge.jp>
+
+	* m4/ax_boost_base.m4:
+	* m4/ax_boost_program_options.m4:
+	- updated M4 macro files.
+
 2009-11-13  Hidehisa Akiyama  <akky@users.sourceforge.jp>
 
 	* NEWS:
